[package]
name = "url-shortner"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
rocket_cors = "0.6.0"
rocket_db_pools = { version = "0.2.0", features = ["mongodb"] }
rocket_okapi = { version = "0.9.0", features = ["swagger"] }
mongodb = "3.2.1"
serde = { version = "1.0", features = ["derive"] }
rand = "0.9.0"
okapi = { version = "0.7.0", features = ["impl_json_schema"] }
dotenv = "0.15.0"
schemars = "0.8.21"
